# aarch64-instruction-performance

./: .editorconfig  CMakeLists.txt  README.md  benchmark-neon.cpp  benchmark-sve.cpp  pretty.jq
results/: AWS-Graviton3E_Neon.json  AWS-Graviton3E_SVE.json  AWS-Graviton3_Neon.json  AWS-Graviton3_SVE.json  AWS-Graviton4_Neon.json  AWS-Graviton4_SVE.json  AWS-Graviton5_Neon.json  AWS-Graviton5_SVE.json  Apple-M4-E_Neon.json  Apple-M4-P_Neon.json  Apple-M4-P_SVE.json  Azure-Cobalt-100_Neon.json  Azure-Cobalt-100_SVE.json
